# small-molecule-protein-binding-affinity

./: GNN_imabalanced.ipynb  README.md  eda.py  gnn.py  pyproject.toml  requirements.txt  smp_binding_affinity_model.py
src/smp_binding_affinity/: datatypes.py  model.py
